Group object attributes by their group