@@ -6,13 +6,49 @@ import sh.adelessfox.odradek.rtti.ClassTypeInfo;
 import sh.adelessfox.odradek.rtti.ContainerTypeInfo;
 import sh.adelessfox.odradek.rtti.TypeInfo;
 import sh.adelessfox.odradek.ui.components.tree.TreeStructure;
+import sh.adelessfox.odradek.util.Gatherers;
 
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
-public sealed interface ObjectStructure extends TreeStructure<ObjectStructure> {
-    record Compound(Game game, ClassTypeInfo type, Object object) implements ObjectStructure {
+public sealed interface ObjectStructure
+    extends TreeStructure<ObjectStructure>
+    permits ObjectStructure.Group, ObjectStructure.Node {
+
+    record Group(
+        Game game,
+        ClassTypeInfo info,
+        String name,
+        List<Attr> attrs,
+        Object object
+    ) implements ObjectStructure {
+        @Override
+        public boolean equals(Object o) {
+            return o instanceof Group(_, var info1, var name1, _, var object1)
+                && info.equals(info1)
+                && name.equals(name1)
+                && object == object1;
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(info, name, System.identityHashCode(object));
+        }
+    }
+
+    sealed interface Node extends ObjectStructure {
+        Game game();
+
+        TypeInfo type();
+
+        Object value();
+    }
+
+    record Compound(Game game, ClassTypeInfo type, Object object) implements Node {
         @Override
         public Object value() {
             return object;
@@ -31,7 +67,7 @@ public sealed interface ObjectStructure extends TreeStructure<ObjectStructure> {
         }
     }
 
-    record Attr(Game game, ClassTypeInfo info, ClassAttrInfo attr, Object object) implements ObjectStructure {
+    record Attr(Game game, ClassTypeInfo info, ClassAttrInfo attr, Object object) implements Node {
         @Override
         public TypeInfo type() {
             return attr.type();
@@ -56,7 +92,7 @@ public sealed interface ObjectStructure extends TreeStructure<ObjectStructure> {
         }
     }
 
-    record Index(Game game, ContainerTypeInfo info, Object object, int index) implements ObjectStructure {
+    record Index(Game game, ContainerTypeInfo info, Object object, int index) implements Node {
         @Override
         public TypeInfo type() {
             return info.itemType();
@@ -81,38 +117,39 @@ public sealed interface ObjectStructure extends TreeStructure<ObjectStructure> {
         }
     }
 
-    Game game();
-
-    TypeInfo type();
-
-    Object value();
-
     @Override
     default List<? extends ObjectStructure> getChildren() {
-        var value = value();
-        if (value == null) {
-            return List.of();
-        }
-        return switch (type()) {
-            case ClassTypeInfo c -> c.serializedAttrs().stream()
-                .map(attr -> new Attr(game(), c, attr, value))
-                .toList();
-            case ContainerTypeInfo c -> IntStream.range(0, c.length(value))
-                .mapToObj(index -> new Index(game(), c, value, index))
-                .toList();
-            default -> throw new IllegalStateException();
+        return switch (this) {
+            case Group group -> group.attrs();
+            case Node node when node.value() == null -> List.of();
+            case Node node -> switch (node.type()) {
+                case ClassTypeInfo c -> c.serializedAttrs().stream()
+                    .map(attr -> new Attr(node.game(), c, attr, node.value()))
+                    .gather(Gatherers.groupingBy(
+                        attr -> attr.attr().group(),
+                        LinkedHashMap::new,
+                        Collectors.toList()))
+                    .flatMap(e -> e.getKey().isEmpty()
+                        ? e.getValue().stream()
+                        : Stream.of(new Group(node.game(), c, e.getKey().orElseThrow(), e.getValue(), node.value())))
+                    .toList();
+                case ContainerTypeInfo c -> IntStream.range(0, c.length(node.value()))
+                    .mapToObj(index -> new Index(node.game(), c, node.value(), index))
+                    .toList();
+                default -> throw new IllegalStateException();
+            };
         };
     }
 
     @Override
     default boolean hasChildren() {
-        var value = value();
-        if (value == null) {
-            return false;
-        }
-        return switch (type()) {
-            case ClassTypeInfo _, ContainerTypeInfo _ -> true;
-            default -> false;
+        return switch (this) {
+            case Group _ -> true;
+            case Node node when node.value() == null -> false;
+            case Node node -> switch (node.type()) {
+                case ClassTypeInfo _, ContainerTypeInfo _ -> true;
+                default -> false;
+            };
         };
     }
 }
